# hw4

./: .travis.yml  README.md
.github/workflows/: build.yml
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: Makefile
